# colony-simulator

./: CLAUDE.md  README.md
.github/workflows/: ci.yml  pages.yml
backend/: Cargo.toml
backend/colony-core/: Cargo.toml
backend/colony-core/benches/: step.rs
backend/colony-core/src/: bee.rs  engine.rs  entity.rs  lib.rs  math.rs  snapshot.rs  world.rs
backend/colony-server/: Cargo.toml
backend/colony-server/src/: main.rs  sim.rs
backend/colony-wasm/: Cargo.toml
backend/colony-wasm/src/: lib.rs
frontend/: .gitignore  README.md  angular.json  package-lock.json  package.json
frontend/public/: manifest.webmanifest
frontend/src/: index.html  styles.scss
frontend/src/app/: app.config.ts  app.html  app.scss  app.spec.ts  app.ts  controls.ts  models.ts  simulation.service.ts  wasm-simulation.ts  websocket-simulation.ts  world-canvas.ts
frontend/src/environments/: environment.production.ts  environment.ts
