[package]
name = "colony-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core simulation domain for the bee colony simulator (no async/networking)."

[dependencies]
serde = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "step"
harness = false
